
............................................................................

   28 Jan, 2019  'language file from repository'
                              Upon auploading to repo, current language file copied here.
   
   31 Jan, 2019   'tiny fixings'
   
   1 Feb 2019     'Fix skiplink issues in Firefox'
                              The current skiplink method worked on Voicover (which is not adapt the standards),
                              but this version did not worke on firefox.
                              
   1 Feb, 2019    'Reading Options accessibility enhancement'
                              Add focus to reading option button on quitng the modal window
                              Escape key also quit the modal window
                              
   2 Feb, 2019    'User friendly archive widget state 1'
                              Create Archive_Widget class to display two dropdown: month and year. 
                              Create function for archive widget
   
   4 Feb,2019     'Fix skiplink issues'
                              New skiplinks tested and some bugs are identified.
                              Now these are fixed.
                              
   4 Feb, 2019   'Add tooltips to accesskeys'
                              Also, some access keys removed. (s and k)
                              
   5 feb, 2019    'Links tooltip'
                              Added tooltips to link category
                              
   6 Feb, 2019    'Breadcrumb warning fix'
   
   11 Feb, 2019   'Skiplink fix'
                              Now it is tested again in different browsers.
   
   11 feb, 2019   'Search result page fix'
                              Screen-readers announced wrongly the widget-searchform.
                              Addcapital letters to accesskeys. 
      
   12 Feb, 2019   'Add user agent detect'
                              Clarify os and browser detection. 